--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,29 @@
 .App-link {
   color: #09d3ac;
 }
+
+@keyframes spinner {
+  0% {
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+  100% {
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+.spinner {
+  height: 100vh;
+  position: relative;
+}
+.spinner::before {
+     border: solid 3px #eee;
+     border-bottom-color: #EF6565;
+     border-radius: 50%;
+     content: "";
+     height: 40px;
+     left: 50%;
+     position: absolute;
+     top: 50%;
+     transform: translate3d(-50%, -50%, 0);
+     width: 40px;
+}
